gh-pages config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://shayanvalaie.github.io/a-stock-frontend",
+  "homepage": "https://shayanvalaie.github.io/a-stock-frontend",
   "name": "agility-stock-frontend",
   "version": "0.1.0",
   "private": true,
